force-app/main/default/objects/Guest_Pass__c/fields/Account_Site_Page__c.field-meta.xml
<CustomField>
    <fullName>Account_Site_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If granted as part of a relationship with an affiliation partner, the site page that the request was submitted from</description>
    <inlineHelpText>If granted as part of a relationship with an affiliation partner, the site page that the request was submitted from</inlineHelpText>
    <label>Account Site Page</label>
    <referenceTo>Account_Site_Page__c</referenceTo>
    <relationshipLabel>Guest Passes</relationshipLabel>
    <relationshipName>Guest_Passes</relationshipName>
    <type>Lookup</type>
</CustomField>