force-app/main/default/objects/Guest_Pass__c/fields/Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email__c</fullName>
    <formula>CASE( Location__r.Name , 
  &quot;Upper East Side&quot;, &quot;uesmembershipbilling@asphaltgreen.org&quot;, 
  &quot;Battery Park City&quot;, &quot;bpcmembershipbilling@asphaltgreen.org&quot;, 
  &quot;membershipbilling@asphaltgreen.org&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Email</label>
    <type>Text</type>
</CustomField>