force-app/main/default/objects/Guest_Pass__c/fields/Claim_Pass_URL__c.field-meta.xml
<CustomField>
    <fullName>Claim_Pass_URL__c</fullName>
    <description>A unique URL for the guest to claim this guest pass</description>
    <formula>$CustomMetadata.External_Site_Setting__mdt.Default.Site_URL__c &amp; 
 &quot;/s/claim-your-guest-pass?pass=&quot; &amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A unique URL for the guest to claim this guest pass</inlineHelpText>
    <label>Claim Pass URL</label>
    <type>Text</type>
</CustomField>