force-app/main/default/objects/Guest_Pass__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Guest Passes</relationshipLabel>
    <relationshipName>Guest_Passes</relationshipName>
    <type>Lookup</type>
</CustomField>