force-app/main/default/objects/Guest_Pass__c/fields/Date_Shared__c.field-meta.xml
<CustomField>
    <fullName>Date_Shared__c</fullName>
    <description>The date that the guest pass was sent to the guest</description>
    <inlineHelpText>The date that the guest pass was sent to the guest</inlineHelpText>
    <label>Date Shared</label>
    <type>Date</type>
</CustomField>