force-app/main/default/objects/Guest_Pass__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>The final date this guest pass can be used</description>
    <inlineHelpText>The final date this guest pass can be used</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>