force-app/main/default/objects/Guest_Pass__c/fields/Expiration_Date_Has_Passed2__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_Has_Passed2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expiration Date Has Passed2</label>
    <type>Checkbox</type>
</CustomField>