force-app/main/default/objects/Guest_Pass__c/fields/Expiration_Date_Has_Passed__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_Has_Passed__c</fullName>
    <formula>Expiration_Date__c &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date Has Passed</label>
    <type>Checkbox</type>
</CustomField>