force-app/main/default/objects/Guest_Pass__c/fields/Expiration_Date_is_Yesterday__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_is_Yesterday__c</fullName>
    <formula>Expiration_Date__c == (TODAY() - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date is Yesterday</label>
    <type>Checkbox</type>
</CustomField>