force-app/main/default/objects/Guest_Pass__c/fields/Guest_Email__c.field-meta.xml
<CustomField>
    <fullName>Guest_Email__c</fullName>
    <formula>IF( !ISBLANK( Contact__c ),
  Contact__r.Email, 
  Lead__r.Email 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Email</label>
    <type>Text</type>
</CustomField>