force-app/main/default/objects/Guest_Pass__c/fields/Guest_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_First_Name__c</fullName>
    <formula>IF( !ISBLANK( Contact__c ),
  Contact__r.FirstName, 
  Lead__r.FirstName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest First Name</label>
    <type>Text</type>
</CustomField>