force-app/main/default/objects/Guest_Pass__c/fields/Guest_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_Full_Name__c</fullName>
    <formula>Guest_First_Name__c &amp; &quot; &quot; &amp; Guest_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Full Name</label>
    <type>Text</type>
</CustomField>