force-app/main/default/objects/Guest_Pass__c/fields/Guest_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_Last_Name__c</fullName>
    <formula>IF( !ISBLANK( Contact__c ),
  Contact__r.LastName, 
  Lead__r.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Last Name</label>
    <type>Text</type>
</CustomField>