force-app/main/default/objects/Guest_Pass__c/fields/Guest_Pass_Sent__c.field-meta.xml
<CustomField>
    <fullName>Guest_Pass_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that an email with a QR code has been delivered to the guest</description>
    <inlineHelpText>Indicates that an email with a QR code has been delivered to the guest</inlineHelpText>
    <label>Guest Pass Sent</label>
    <type>Checkbox</type>
</CustomField>