force-app/main/default/objects/Guest_Pass__c/fields/Host_Account__c.field-meta.xml
<CustomField>
    <fullName>Host_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The organization or household responsible for the guest pass relationship, if applicable</description>
    <inlineHelpText>The organization or household responsible for the guest pass relationship, if applicable</inlineHelpText>
    <label>Host Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Guest Passes</relationshipLabel>
    <relationshipName>Guest_Passes</relationshipName>
    <type>Lookup</type>
</CustomField>