force-app/main/default/objects/Guest_Pass__c/fields/Host_Contact__c.field-meta.xml
<CustomField>
    <fullName>Host_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact that invited the guest to Asphalt Green</description>
    <inlineHelpText>The contact that invited the guest to Asphalt Green</inlineHelpText>
    <label>Host Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hosted Guest Passes</relationshipLabel>
    <relationshipName>Hosted_Guest_Passes</relationshipName>
    <type>Lookup</type>
</CustomField>