force-app/main/default/objects/Guest_Pass__c/fields/Host_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Host_First_Name__c</fullName>
    <formula>Host_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host First Name</label>
    <type>Text</type>
</CustomField>