force-app/main/default/objects/Guest_Pass__c/fields/Host_Membership__c.field-meta.xml
<CustomField>
    <fullName>Host_Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host Membership</label>
    <referenceTo>TREX1__Membership__c</referenceTo>
    <relationshipLabel>Hosted Guest Passes</relationshipLabel>
    <relationshipName>Hosted_Guest_Passes</relationshipName>
    <type>Lookup</type>
</CustomField>