force-app/main/default/objects/Guest_Pass__c/fields/Invitation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the invitation email has been sent to the guest</description>
    <inlineHelpText>Indicates that the invitation email has been sent to the guest</inlineHelpText>
    <label>Invitation Sent</label>
    <type>Checkbox</type>
</CustomField>