force-app/main/default/objects/Guest_Pass__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>TREX1__Location__c</referenceTo>
    <relationshipLabel>Guest Passes</relationshipLabel>
    <relationshipName>Guest_Passes</relationshipName>
    <type>Lookup</type>
</CustomField>