force-app/main/default/objects/Guest_Pass__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <formula>IMAGE(&quot;https://chart.googleapis.com/chart?chs=400x400&amp;cht=qr&amp;chl=&quot; &amp; Name ,&quot;Scan QR Code to check in Guest Pass&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>