force-app/main/default/objects/Guest_Pass__c/fields/Related_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_ID__c</fullName>
    <formula>IF( !ISBLANK( Contact__c ),
  CASESAFEID( Contact__c ),
  CASESAFEID( Lead__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Record ID</label>
    <type>Text</type>
</CustomField>