force-app/main/default/objects/Guest_Pass__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>The origin of the guest pass</description>
    <inlineHelpText>The origin of the guest pass</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affiliation</fullName>
            </value>
            <value>
                <fullName>Guest of Asphalt Green</fullName>
            </value>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>