force-app/main/default/objects/Guest_Pass__c/fields/Visit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Visit_Date_Time__c</fullName>
    <description>The date/time that the guest pass was used to visit the facility</description>
    <inlineHelpText>The date/time that the guest pass was used to visit the facility</inlineHelpText>
    <label>Visit Date/Time</label>
    <type>DateTime</type>
</CustomField>