force-app/main/default/objects/Guest_Pass__c/fields/Waiver_Signed__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waiver Signed</label>
    <type>Checkbox</type>
</CustomField>