force-app/main/default/objects/Guest_Pass__c/listViews/Valid_Guest_Passes.listView-meta.xml
<ListView>
    <fullName>Valid_Guest_Passes</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Lead__c</columns>
    <columns>Location__c</columns>
    <columns>Source__c</columns>
    <columns>Status__c</columns>
    <columns>Visit_Date_Time__c</columns>
    <columns>Waiver_Signed__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Valid</value>
    </filters>
    <label>Valid Guest Passes</label>
</ListView>